--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="CheckBox">CheckBox ini : Tidak Dicentang!</string>
     <string name="title_activity_radio_button">RadioButton</string>
     <string name="title_activity_list_view">ListView</string>
+    <string name="title_activity_playing_audio">playingAudio</string>
 </resources>
